--- a/Visualizer/src/View/topology/CellOptions.fxml
+++ b/Visualizer/src/View/topology/CellOptions.fxml
@@ -10,28 +10,28 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 
-<Pane maxHeight="160" maxWidth="160" minHeight="160" minWidth="160" style="-fx-border-color: black;" pickOnBounds="false" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.topology.CellOptionsController">
+<Pane fx:id="rootPane" maxHeight="160" maxWidth="160" minHeight="160" minWidth="160" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.topology.CellOptionsController">
    <children>
-      <GridPane fx:id="rootPane" pickOnBounds="false" >
+      <GridPane fx:id="gridPane">
           <padding>
             <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
          </padding>
       
-          <Label pickOnBounds="false" text="Range" underline="true" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="0">
+          <Label text="Range" underline="true" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="0">
     </Label>
-          <Label pickOnBounds="false" text="Avg. Range" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+          <Label text="Avg. Range" GridPane.columnIndex="0" GridPane.rowIndex="1" />
           <DoubleTextField fx:id="txtCellAvgRangeMean" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-          <Label pickOnBounds="false" text="Deviation" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+          <Label text="Deviation" GridPane.columnIndex="0" GridPane.rowIndex="2" />
           <DoubleTextField fx:id="txtCellAvgRangeDeviation" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       
-          <Label pickOnBounds="false" text="Number of Nodes pr. Cell" underline="true" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="3">
+          <Label text="Number of Nodes pr. Cell" underline="true" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="3">
               <padding>
                <Insets bottom="5" top="5.0" />
             </padding>
           </Label>
-          <Label pickOnBounds="false" text="Avg. number" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+          <Label text="Avg. number" GridPane.columnIndex="0" GridPane.rowIndex="4" />
           <IntegerTextField fx:id="txtAvgNodesPrCell" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-          <Label pickOnBounds="false" text="Deviation" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+          <Label text="Deviation" GridPane.columnIndex="0" GridPane.rowIndex="5" />
           <DoubleTextField fx:id="txtNodesCellDeviation" GridPane.columnIndex="1" GridPane.rowIndex="5" />
          <columnConstraints>
             <ColumnConstraints minWidth="80.0" />
