--- a/Visualizer/src/View/topology/TopologyGenerator.fxml
+++ b/Visualizer/src/View/topology/TopologyGenerator.fxml
@@ -2,6 +2,7 @@
 
 <?import View.DoubleTextField?>
 <?import View.IntegerTextField?>
+<?import View.ToggleSwitch?>
 <?import com.lynden.gmapsfx.GoogleMapView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
@@ -72,11 +73,35 @@
               </AnchorPane>
             </content>
           </TitledPane>
+          <TitledPane text="Layout">
+              <content>
+                  <AnchorPane>
+                     <children>
+                        <GridPane hgap="10">
+                            <padding>
+                                <Insets left="5.0" right="5.0" top="5.0" />
+                            </padding>
+                            <columnConstraints>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="90.0" halignment="RIGHT" />
+                            </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints />
+                           </rowConstraints>
+                           <children>
+                              <Label text="Show Cell Options:" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+                              <ToggleSwitch fx:id="chkShowGridSettings" GridPane.halignment="RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+                           </children>
+                        </GridPane>
+                     </children>
+                  </AnchorPane>
+              </content>
+          </TitledPane>
         </panes>
       </Accordion>
    </right>
    <center>
-      <AnchorPane BorderPane.alignment="CENTER" >
+      <AnchorPane BorderPane.alignment="CENTER">
          <children>
             <GoogleMapView fx:id="mapView" />
             <GridPane fx:id="gridPaneCells" gridLinesVisible="true" pickOnBounds="false" />
